package cn.thinkinjava.design.pattern.struct.adapter.frame;

/**
 * 源角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class Adaptee {

    public void sampleOperation1() {

    }

}
