package cn.thinkinjava.design.pattern.struct.adapter.frame;

/**
 * 目标角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public interface Target {
    void sampleOperation1();
    void sampleOperation2();
}
